[kitchen-docker-05] - Correcao de relacionamentos | remodelagem de DTOS | Melhoria em componentes no front]