@@ -6,29 +6,31 @@ import br.com.kitchen.api.dto.ProductDTO;
 import br.com.kitchen.api.model.Cart;
 import br.com.kitchen.api.model.CartItems;
 import br.com.kitchen.api.model.Product;
-import br.com.kitchen.api.model.User;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class CartMapper {
+
     public static CartDTO toResponseDTO(Cart cart) {
         return new CartDTO(
                 cart.getId(),
-                cart.getUser().getId(),
                 cart.getCartItems().stream()
                         .map(CartMapper::itemToResponseDTO)
-                        .toList(),
+                        .collect(Collectors.toList()),
                 cart.getCreation(),
-                cart.getActive(),
-                cart.getCartTotal()
+                cart.getCartTotal(),
+                ShippingMapper.toDTOList(cart.getShipping())
         );
     }
 
     private static CartItemsDTO itemToResponseDTO(CartItems cartItems) {
         return new CartItemsDTO(
                 cartItems.getId(),
-                new ProductDTO(cartItems.getProduct().getId(),
-                        cartItems.getProduct().getName()),
+                ProductDTO.builder()
+                        .id(cartItems.getId())
+                        .name(cartItems.getProduct().getName())
+                        .sku(cartItems.getProduct().getSkus().get(0).getSku()).build(),
                 cartItems.getQuantity(),
                 cartItems.getItemValue()
         );
@@ -36,15 +38,13 @@ public class CartMapper {
 
     public static Cart toEntity(CartDTO cartDTO) {
         Cart cart = new Cart();
-        cart.setUser(new User(cartDTO.getUserId()));
         cart.setId(cartDTO.getId());
         List<CartItems> items = cartDTO.getCartItems().stream()
                 .map(CartMapper::itemToEntity)
-                .toList();
+                .collect(Collectors.toList());
 
         cart.setCartItems(items);
         cart.setCreation(cartDTO.getCreation());
-        cart.setActive(cartDTO.getActive());
         cart.setCartTotal(cartDTO.getCartTotal());
         return cart;
     }
@@ -54,8 +54,8 @@ public class CartMapper {
         item.setId(dto.getId());
 
         Product product = new Product();
-        product.setId(dto.getProduct().getId());
-        product.setName(dto.getProduct().getName());
+        product.setId(dto.getProductDTO().getId());
+        product.setName(dto.getProductDTO().getName());
         item.setProduct(product);
 
         item.setQuantity(dto.getQuantity());
